Update to Qt5 and modern C++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 PROJECT (OPENC2E CXX C)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 SET(SRC "${OPENC2E_SOURCE_DIR}")
 SET(BIN "${OPENC2E_BINARY_DIR}")
 SET(GEN "${BIN}/generated")
@@ -199,7 +202,7 @@ FIND_PACKAGE(ALUT)
 FIND_PACKAGE(Boost 1.34.0 COMPONENTS program_options filesystem thread regex serialization REQUIRED)
 FIND_LIBRARY(BOOST_SYSTEM_LIBRARY NAMES boost_system-mt)
 IF(OPENC2E_USE_QT)
-	find_package(Qt4 REQUIRED)
+        find_package(Qt5 COMPONENTS Widgets Gui REQUIRED)
 ENDIF(OPENC2E_USE_QT)
 
 SET(USE_OPENAL "NO")
@@ -237,24 +240,23 @@ ELSE(SDLMIXER_FOUND)
 ENDIF(SDLMIXER_FOUND)
 
 IF(OPENC2E_USE_QT)
-	include(${QT_USE_FILE})
-	SET(SAVED_CMAKE_CURRENT_BINARY_DIR CMAKE_CURRENT_BINARY_DIR)
-	SET(CMAKE_CURRENT_BINARY_DIR ${GEN})
-	QT4_WRAP_UI(OPENC2E_QT_UIS_H ${OPENC2E_QT_UIS})
-	QT4_WRAP_CPP(OPENC2E_QT_MOC_SRCS ${OPENC2E_QT_MOC_HDRS})
-	SET(CMAKE_CURRENT_BINARY_DIR SAVED_CMAKE_CURRENT_BINARY_DIR)
-	SET(QT_DEF "-DQT_SUPPORT")
+        set(SAVED_CMAKE_CURRENT_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
+        set(CMAKE_CURRENT_BINARY_DIR ${GEN})
+        qt5_wrap_ui(OPENC2E_QT_UIS_H ${OPENC2E_QT_UIS})
+        qt5_wrap_cpp(OPENC2E_QT_MOC_SRCS ${OPENC2E_QT_MOC_HDRS})
+        set(CMAKE_CURRENT_BINARY_DIR ${SAVED_CMAKE_CURRENT_BINARY_DIR})
+        SET(QT_DEF "-DQT_SUPPORT")
 ENDIF(OPENC2E_USE_QT)
 
 # Pass flags to the compiler
 ADD_DEFINITIONS("-W -Wall -Wno-conversion -Wno-unused -D_REENTRANT -DYYERROR_VERBOSE ${OPENAL_DEF} ${QT_DEF} ${SDLMIXER_DEF}")
 
 IF(OPENC2E_USE_QT)
-	SET(FRONTEND_SRCS ${OPENC2E_SDL} ${OPENC2E_QT} ${OPENC2E_QT_UIS_H} ${OPENC2E_QT_MOC_SRCS})
-	SET(FRONTEND_LIBS ${QT_LIBRARIES})
+        SET(FRONTEND_SRCS ${OPENC2E_SDL} ${OPENC2E_QT} ${OPENC2E_QT_UIS_H} ${OPENC2E_QT_MOC_SRCS})
+        SET(FRONTEND_LIBS Qt5::Widgets Qt5::Gui)
 ELSE(OPENC2E_USE_QT)
-	SET(FRONTEND_SRCS ${OPENC2E_SDL})
-	SET(FRONTEND_LIBS)
+        SET(FRONTEND_SRCS ${OPENC2E_SDL})
+        SET(FRONTEND_LIBS)
 ENDIF(OPENC2E_USE_QT)
 ADD_EXECUTABLE(openc2e ${OPENC2E_CORE} ${FRONTEND_SRCS} ${OPENAL_SRC} ${SDLMIXER_SRC} ${SER_SRCS})
 
