Port to SDL2 and Qt5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,11 +184,12 @@ IF(HAVE_STDINT_H)
 ELSE(HAVE_STDINT_H)
 ENDIF(HAVE_STDINT_H)
 
-FIND_PACKAGE(SDL REQUIRED)
-FIND_PACKAGE(SDL_mixer)
-FIND_PACKAGE(SDL_net REQUIRED)
-FIND_PACKAGE(SDL_gfx REQUIRED)
-FIND_PACKAGE(SDL_ttf REQUIRED)
+find_package(PkgConfig REQUIRED)
+FIND_PACKAGE(SDL2 REQUIRED)
+FIND_PACKAGE(SDL2_mixer)
+FIND_PACKAGE(SDL2_net REQUIRED)
+FIND_PACKAGE(SDL2_gfx REQUIRED)
+FIND_PACKAGE(SDL2_ttf REQUIRED)
 IF(OPENC2E_USE_OPENAL MATCHES "^(YES|AUTO)$")
 	FIND_PACKAGE(OpenAL)
 ELSE(OPENC2E_USE_OPENAL MATCHES "^(YES|AUTO)$")
@@ -199,7 +200,11 @@ FIND_PACKAGE(ALUT)
 FIND_PACKAGE(Boost 1.34.0 COMPONENTS program_options filesystem thread regex serialization REQUIRED)
 FIND_LIBRARY(BOOST_SYSTEM_LIBRARY NAMES boost_system-mt)
 IF(OPENC2E_USE_QT)
-	find_package(Qt4 REQUIRED)
+        find_package(Qt5Widgets REQUIRED)
+        set(QT_LIBRARIES Qt5::Widgets)
+        set(CMAKE_AUTOMOC ON)
+        set(CMAKE_AUTOUIC ON)
+        set(CMAKE_AUTORCC ON)
 ENDIF(OPENC2E_USE_QT)
 
 SET(USE_OPENAL "NO")
@@ -226,24 +231,23 @@ ELSE(USE_OPENAL STREQUAL "NO")
     SET(OPENAL_DEF "-DOPENAL_SUPPORT")
 ENDIF(USE_OPENAL STREQUAL "NO")
 
-IF(SDLMIXER_FOUND)
+IF(SDL2_MIXER_FOUND)
     SET(SDLMIXER_SRC "src/backends/SDLMixerBackend.cpp")
     SET(SDLMIXER_DEF "-DSDLMIXER_SUPPORT")
-ELSE(SDLMIXER_FOUND)
+ELSE(SDL2_MIXER_FOUND)
     SET(SDLMIXER_INCLUDE_DIR "")
     SET(SDLMIXER_LIBRARY "")
     SET(SDLMIXER_SRC "")
     SET(SDLMIXER_DEF "")
-ENDIF(SDLMIXER_FOUND)
+ENDIF(SDL2_MIXER_FOUND)
 
 IF(OPENC2E_USE_QT)
-	include(${QT_USE_FILE})
-	SET(SAVED_CMAKE_CURRENT_BINARY_DIR CMAKE_CURRENT_BINARY_DIR)
-	SET(CMAKE_CURRENT_BINARY_DIR ${GEN})
-	QT4_WRAP_UI(OPENC2E_QT_UIS_H ${OPENC2E_QT_UIS})
-	QT4_WRAP_CPP(OPENC2E_QT_MOC_SRCS ${OPENC2E_QT_MOC_HDRS})
-	SET(CMAKE_CURRENT_BINARY_DIR SAVED_CMAKE_CURRENT_BINARY_DIR)
-	SET(QT_DEF "-DQT_SUPPORT")
+        SET(SAVED_CMAKE_CURRENT_BINARY_DIR CMAKE_CURRENT_BINARY_DIR)
+        SET(CMAKE_CURRENT_BINARY_DIR ${GEN})
+        qt5_wrap_ui(OPENC2E_QT_UIS_H ${OPENC2E_QT_UIS})
+        qt5_wrap_cpp(OPENC2E_QT_MOC_SRCS ${OPENC2E_QT_MOC_HDRS})
+        SET(CMAKE_CURRENT_BINARY_DIR SAVED_CMAKE_CURRENT_BINARY_DIR)
+        SET(QT_DEF "-DQT_SUPPORT")
 ENDIF(OPENC2E_USE_QT)
 
 # Pass flags to the compiler
@@ -258,15 +262,15 @@ ELSE(OPENC2E_USE_QT)
 ENDIF(OPENC2E_USE_QT)
 ADD_EXECUTABLE(openc2e ${OPENC2E_CORE} ${FRONTEND_SRCS} ${OPENAL_SRC} ${SDLMIXER_SRC} ${SER_SRCS})
 
-TARGET_LINK_LIBRARIES(openc2e z m pthread 
-	${SDL_LIBRARY}
-	${SDLNET_LIBRARY}
-	${SDLTTF_LIBRARY}
-	${SDLGFX_LIBRARY}
-	${SDLMIXER_LIBRARY}
-	${OPENAL_LIBRARY}
-	${ALUT_LIBRARY}
-	${FRONTEND_LIBS}
+TARGET_LINK_LIBRARIES(openc2e z m pthread
+        ${SDL2_LIBRARY}
+        ${SDL2_NET_LIBRARIES}
+        ${SDL2_TTF_LIBRARIES}
+        ${SDL2_GFX_LIBRARIES}
+        ${SDL2_MIXER_LIBRARIES}
+        ${OPENAL_LIBRARY}
+        ${ALUT_LIBRARY}
+        ${FRONTEND_LIBS}
 	boost_program_options-mt
 	boost_serialization-mt
 	boost_filesystem-mt
@@ -282,15 +286,16 @@ LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 INCLUDE_DIRECTORIES(BEFORE
 	${GEN}
 	${SRC}/src
-	${SDL_INCLUDE_DIR}
-	${SDLNET_INCLUDE_DIR}
-	${SDLTTF_INCLUDE_DIR}
-	${SDLGFX_INCLUDE_DIR}
-	${SDLMIXER_INCLUDE_DIR}
-	${OPENAL_INCLUDE_DIR}
-	${ALUT_INCLUDE_DIR}
-	${Boost_INCLUDE_DIR}
-	)
+        ${SDL2_INCLUDE_DIR}
+        ${SDL2_NET_INCLUDE_DIRS}
+        ${SDL2_TTF_INCLUDE_DIRS}
+        ${SDL2_GFX_INCLUDE_DIRS}
+        ${SDL2_MIXER_INCLUDE_DIRS}
+        ${Qt5Widgets_INCLUDE_DIRS}
+        ${OPENAL_INCLUDE_DIR}
+        ${ALUT_INCLUDE_DIR}
+        ${Boost_INCLUDE_DIR}
+        )
 
 FILE(GLOB CAOSVM_FILES ${SRC}/src/caos/caosVM_*.cpp)
 ADD_CUSTOM_COMMAND(
