Add option to toggle SDL support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,10 @@ SET(OPENC2E_USE_QT "TRUE" CACHE BOOL "Build the qt GUI")
 SET(OPENC2E_USE_OPENAL "AUTO" CACHE STRING "Use OpenAL (YES/NO/AUTO)")
 IF (OPENC2E_USE_OPENAL MATCHES "^(YES|NO|AUTO)$")
 ELSE (OPENC2E_USE_OPENAL MATCHES "^(YES|NO|AUTO)$")
-	MESSAGE(SEND_ERROR "The value of OPENC2E_USE_OPENAL must be YES, NO, or AUTO.")
+        MESSAGE(SEND_ERROR "The value of OPENC2E_USE_OPENAL must be YES, NO, or AUTO.")
 ENDIF (OPENC2E_USE_OPENAL MATCHES "^(YES|NO|AUTO)$")
+
+OPTION(OPENC2E_ENABLE_SDL "Enable SDL support" OFF)
 
 SET(OPENC2E_USE_SERIALIZATION "FALSE" CACHE BOOL "Build the experimental serialization code")
 MARK_AS_ADVANCED(FORCE OPENC2E_USE_SERIALIZATION)
@@ -128,9 +130,15 @@ SET(OPENC2E_CORE
 	src/util.cpp
 )
 
+IF(OPENC2E_ENABLE_SDL)
 SET(OPENC2E_SDL
-	src/backends/SDLBackend.cpp
+        src/backends/SDLBackend.cpp
 )
+SET(SDL_DEF "-DSDL_SUPPORT")
+ELSE()
+SET(OPENC2E_SDL "")
+SET(SDL_DEF "")
+ENDIF()
 
 SET(OPENC2E_QT
 	src/backends/qtgui/qtopenc2e.cpp
@@ -184,11 +192,25 @@ IF(HAVE_STDINT_H)
 ELSE(HAVE_STDINT_H)
 ENDIF(HAVE_STDINT_H)
 
+IF(OPENC2E_ENABLE_SDL)
 FIND_PACKAGE(SDL REQUIRED)
 FIND_PACKAGE(SDL_mixer)
 FIND_PACKAGE(SDL_net REQUIRED)
 FIND_PACKAGE(SDL_gfx REQUIRED)
 FIND_PACKAGE(SDL_ttf REQUIRED)
+ELSE()
+    SET(SDL_LIBRARY "")
+    SET(SDL_INCLUDE_DIR "")
+    SET(SDLNET_LIBRARY "")
+    SET(SDLNET_INCLUDE_DIR "")
+    SET(SDLMIXER_LIBRARY "")
+    SET(SDLMIXER_INCLUDE_DIR "")
+    SET(SDLTTF_LIBRARY "")
+    SET(SDLTTF_INCLUDE_DIR "")
+    SET(SDLGFX_LIBRARY "")
+    SET(SDLGFX_INCLUDE_DIR "")
+    SET(SDLMIXER_FOUND FALSE)
+ENDIF()
 IF(OPENC2E_USE_OPENAL MATCHES "^(YES|AUTO)$")
 	FIND_PACKAGE(OpenAL)
 ELSE(OPENC2E_USE_OPENAL MATCHES "^(YES|AUTO)$")
@@ -226,15 +248,15 @@ ELSE(USE_OPENAL STREQUAL "NO")
     SET(OPENAL_DEF "-DOPENAL_SUPPORT")
 ENDIF(USE_OPENAL STREQUAL "NO")
 
-IF(SDLMIXER_FOUND)
+IF(OPENC2E_ENABLE_SDL AND SDLMIXER_FOUND)
     SET(SDLMIXER_SRC "src/backends/SDLMixerBackend.cpp")
     SET(SDLMIXER_DEF "-DSDLMIXER_SUPPORT")
-ELSE(SDLMIXER_FOUND)
+ELSE()
     SET(SDLMIXER_INCLUDE_DIR "")
     SET(SDLMIXER_LIBRARY "")
     SET(SDLMIXER_SRC "")
     SET(SDLMIXER_DEF "")
-ENDIF(SDLMIXER_FOUND)
+ENDIF()
 
 IF(OPENC2E_USE_QT)
 	include(${QT_USE_FILE})
@@ -247,7 +269,7 @@ IF(OPENC2E_USE_QT)
 ENDIF(OPENC2E_USE_QT)
 
 # Pass flags to the compiler
-ADD_DEFINITIONS("-W -Wall -Wno-conversion -Wno-unused -D_REENTRANT -DYYERROR_VERBOSE ${OPENAL_DEF} ${QT_DEF} ${SDLMIXER_DEF}")
+ADD_DEFINITIONS("-W -Wall -Wno-conversion -Wno-unused -D_REENTRANT -DYYERROR_VERBOSE ${OPENAL_DEF} ${QT_DEF} ${SDLMIXER_DEF} ${SDL_DEF}")
 
 IF(OPENC2E_USE_QT)
 	SET(FRONTEND_SRCS ${OPENC2E_SDL} ${OPENC2E_QT} ${OPENC2E_QT_UIS_H} ${OPENC2E_QT_MOC_SRCS})
